@@ -1,3 +1,8 @@
+2019-03-12  Matt Novenstern  <fisxoj@ardens>
+
+	* Makefile (SBCL_VERSION): Bump to 1.5.0
+	(QUICKLISP_DISP): New dist 2019-03-07
+
 2018-12-12  Matt Novenstern  <fisxoj@gmail.com>
 
 	* Makefile (SBCL_VERSION): Bump to 1.4.14
